--- a/app/content/stars-info.html
+++ b/app/content/stars-info.html
@@ -1,6 +1,6 @@
 <h1>Rykte</h1>
-<p>Pug lifes användare kan samla poäng genom att utföra oilka handlingar på sidan. Poängen representeras av en stjärna
-bredvid användarens profilbild. De som har samlat ihop flest stjärnor är de absolut bästa och flitigaste användarna. De har ett väldigt bra ryckte. 
+<p>Pug lifes användare kan samla poäng genom att utföra olika handlingar på sidan. Poängen representeras av en stjärna
+bredvid användarens profilbild. De som har samlat ihop flest stjärnor är de absolut bästa och flitigaste användarna. De har ett väldigt bra rykte. 
 Sätt själv igång och samla poäng!</p>
 
 <p>Poäng ges efter du utfört följande handlingar:</p>
